[MODORDERS-1143] Fix sonar issues